complete auth and set guard
