# src/main/java/ir/piana/tech/core/api/UserApiImpl.java
@@ -2,8 +2,11 @@ package ir.piana.tech.core.api;
 
 import ir.piana.tech.api.dto.*;
 import ir.piana.tech.api.service.GuestApiDelegate;
+import ir.piana.tech.api.service.UserApiDelegate;
 import ir.piana.tech.business.data.service.UserService;
 import ir.piana.tech.core.mapper.MeMapper;
+import ir.piana.tech.core.mapper.TokenActionMapper;
+import ir.piana.tech.core.mapper.TokenTypeMapper;
 import ir.piana.tech.core.secuity.PianaAuthenticationService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -16,7 +19,7 @@ import org.springframework.stereotype.Component;
  * Date: 7/20/2019 11:37 AM
  **/
 @Component
-public class GuestApiImpl implements GuestApiDelegate {
+public class UserApiImpl implements UserApiDelegate {
     @Autowired
     private PianaAuthenticationService authenticationService;
 
@@ -27,28 +30,26 @@ public class GuestApiImpl implements GuestApiDelegate {
     private MeMapper meMapper;
 
     @Autowired
+    private TokenActionMapper actionMapper;
+
+    @Autowired
+    private TokenTypeMapper typeMapper;
+
+    @Autowired
     @Qualifier("sessionRegistry")
     private SessionRegistry sessionRegistry;
 
     @Override
-    public ResponseEntity<TokenRequiredDto> signup(SignupDto signupDto) {
-        userService.signup(
-                signupDto.getUsername(),
-                signupDto.getMobile(),
-                signupDto.getPassword());
-        TokenRequiredDto tokenRequiredDto = new TokenRequiredDto();
-        return ResponseEntity.ok().body(tokenRequiredDto);
+    public ResponseEntity<MeDto> verifyToken(VerifyTokenDto verifyTokenDto) {
+        return ResponseEntity.ok().body(meMapper.toMeDto(userService.verify(
+                verifyTokenDto.getCode(),
+                typeMapper.toTokenType(verifyTokenDto.getTokenType()),
+                actionMapper.toTokenAction(verifyTokenDto.getTokenAction()))));
     }
 
     @Override
-    public ResponseEntity<MeDto> login(LoginDto loginDto) {
-        MeDto meDto = meMapper.toMeDto(userService.login(loginDto.getMobile(), loginDto.getPassword()));
-        return ResponseEntity.ok().body(meDto);
-    }
-
-    @Override
-    public ResponseEntity<TokenRequiredDto> forgetPassword(ForgetPasswordDto forgetPasswordDto) {
-        userService.forgetPassword(forgetPasswordDto.getMobile(), forgetPasswordDto.getNewPassword());
+    public ResponseEntity<Void> logout() {
+        userService.logout();
         return ResponseEntity.ok().build();
     }
 }
